Fix header z-index

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   padding: 6rem 0;
-  z-index: 5;
+  z-index: 6;
 }
 
 .Header--Logo {
